# Copyright 2024-2025 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_arb_fixed",
    srcs = ["br_arb_fixed.sv"],
    deps = [
        "//arb/rtl/internal:br_arb_fixed_internal",
        "//macros:br_asserts_internal",
    ],
)

verilog_library(
    name = "br_arb_lru",
    srcs = ["br_arb_lru.sv"],
    deps = [
        "//arb/rtl/internal:br_arb_lru_internal",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//macros:br_unused",
    ],
)

verilog_library(
    name = "br_arb_rr",
    srcs = ["br_arb_rr.sv"],
    deps = [
        "//arb/rtl/internal:br_arb_rr_internal",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_arb_pri_rr",
    srcs = ["br_arb_pri_rr.sv"],
    deps = [
        "//arb/rtl/internal:br_rr_state_internal",
        "//macros:br_asserts_internal",
        "//macros:br_unused",
        "//pkg:br_math_pkg",
    ],
)

verilog_library(
    name = "br_arb_weighted_rr",
    srcs = ["br_arb_weighted_rr.sv"],
    deps = [
        "//arb/rtl:br_arb_pri_rr",
        "//counter/rtl:br_counter",
        "//macros:br_asserts_internal",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_arb_fixed_test_suite",
    params = {"NumRequesters": [
        "2",
        "5",
    ]},
    deps = [":br_arb_fixed"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_arb_lru_test_suite",
    params = {"NumRequesters": [
        "2",
        "5",
    ]},
    deps = [":br_arb_lru"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_arb_rr_test_suite",
    params = {"NumRequesters": [
        "2",
        "5",
    ]},
    deps = [":br_arb_rr"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_arb_rr_test_suite",
    params = {
        "NumRequesters": [
            "2",
            "5",
        ],
        "NumPriorities": [
            "2",
            "3",
        ],
    },
    deps = [":br_arb_pri_rr"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_arb_weighted_rr_test_suite",
    params = {
        "NumRequesters": [
            "2",
            "5",
        ],
        "MaxAccumulatedWeight": [
            "8",
        ],
        "MaxWeight": [
            "2",
            "5",
        ],
    },
    deps = [":br_arb_weighted_rr"],
)
