# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:verilog.bzl", "verilog_elab_test")

package(default_visibility = ["//visibility:private"])

verilog_library(
    name = "br_dv_test_tb",
    srcs = ["br_dv_test_tb.sv"],
    deps = ["//br_dv_lib:br_dv_test"],
)

verilog_elab_test(
    name = "br_dv_test_elab_test",
    tool = "slang",
    deps = [":br_dv_test_tb"],
)
